fixed css paths

--- a/resource/index.html
+++ b/resource/index.html
@@ -35,7 +35,7 @@
         </ul>
       </div>
       <div id="main-panel">
-        links on the left here works like bookmarks
+         + an image or a quote relating to resources
       </div>
     </div>
   </body>
