--- a/resource/references.html
+++ b/resource/references.html
@@ -8,7 +8,7 @@
     <title>Critical Computation</title>
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="../style.css" />
     
       <!-- import tabletop.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js"></script>
