--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -148,7 +148,8 @@
             zhany016[at]newschool[dot]edu
           </div>
           <div class="assignment-grid-item">
-            <a href="">Zoom Link</a>
+            <a href="https://NewSchool.zoom.us/j/99519780382?pwd=UzE3MFg4RVFvUFo2ZXA0ZEsxNmVIZz09">Zoom Link</a>
+            pw: mfadt
           </div>
 
           <div class="assignment-grid-item">Elena Gold (they/them)</div>
