--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Critical Computation</title>
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
