added reading list, updated js path to fix reference page

--- a/assignment/1.html
+++ b/assignment/1.html
@@ -16,7 +16,9 @@
   <body>
     <div class="nav-container">
       <div style="font-size: 24px">
-        Critical Computation
+        <a href="../">
+          Critical Computation
+        </a>
       </div>
       <div><a href="../syllabus/">syllabus</a></div>
       <div>
@@ -240,6 +242,22 @@
         <h2>
           Translate(), Rotate(), Push(), Pop()
         </h2>
+
+        <h2>
+          Embed p5 Sketch on Glitch
+        </h2>
+
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/FkGnZTu51PQ"
+          frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+        <p>
+          Thanks aarati for contributing the tutorial!
+        </p>
       </div>
     </div>
   </body>
