--- a/resource/tutorials.html
+++ b/resource/tutorials.html
@@ -16,7 +16,9 @@
   <body>
     <div class="nav-container">
       <div style="font-size: 24px">
-        Critical Computation
+        <a href="../">
+          Critical Computation
+        </a>
       </div>
       <div><a href="../syllabus/">syllabus</a></div>
       <div>
@@ -36,28 +38,26 @@
           <li><a href="lectures.html">Lectures</a></li>
           <li><a href="tutorials.html">Tutorials</a></li>
           <li><a href="readings.html">Readings</a></li>
-           <li><a href="references.html">References</a></li>
-
+          <li><a href="references.html">References</a></li>
         </ul>
       </div>
       <div id="main-panel">
         <h1>
           CC Tutorials
         </h1>
-        <ol>
-          <li>
+        <ul class="bullet">
+          <h2>
             Wk 1
+          </h2>
+                   <li>
+            1.1 p5 Web Editor and the Console (<a href ="https://youtu.be/wiG7wLwyW0E" target="blank">YouTube</a> / <a href ="https://diode.zone/videos/watch/ce6aa5ed-7170-4b07-84db-5fa10199a55d" target="blank">PeerTube</a>)
           </li>
+          
           <li>
-           Wk 2
+            Embed p5 Sketch on Glitch by aarati akkapeddi (<a href ="https://www.youtube.com/watch?v=FkGnZTu51PQ&feature=youtu.be" target="blank">YouTube</a>)
           </li>
-          <li>
-           Wk 3
-          </li>
-          <li>
-         Wk 4
-          </li>
-        </ol>
+          
+        </ul>
       </div>
     </div>
   </body>
