--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -19,7 +19,9 @@
   <body>
     <div class="nav-container">
       <div style="font-size: 24px">
+        <a href="../">
         Critical Computation
+        </a>
       </div>
       <div><a href="../syllabus/">syllabus</a></div>
       <div>
