--- a/people/honeylocust.html
+++ b/people/honeylocust.html
@@ -16,7 +16,9 @@
   <body>
     <div class="nav-container">
             <div style ="font-size: 24px">
+            <a href="../">
         Critical Computation
+        </a>
       </div>
       <div><a href="../syllabus/">syllabus</a></div>
       <div><a href="https://docs.google.com/document/d/1Ys7vgu9EzaN4TJtlDBwhE9Utso-Mci8hIh_kCjhfsH0/edit#heading=h.dwxd84w1owa" target="blank">schedule</a></div>
