--- a/resource/lectures.html
+++ b/resource/lectures.html
@@ -16,7 +16,9 @@
   <body>
     <div class="nav-container">
       <div style="font-size: 24px">
+           <a href="../">
         Critical Computation
+        </a>
       </div>
       <div><a href="../syllabus/">syllabus</a></div>
       <div>
@@ -44,20 +46,17 @@
         <h1>
           CC Lectures
         </h1>
-        <ol>
+        <h2>
+           Wk 1
+        </h2>
+        <ul class = "bullet">
           <li>
-            Wk 1
+            1.1 Is Technology Neutral? (<a href ="https://www.youtube.com/watch?v=76Rx2jldGXQ&list=PLhlnwyfMOozUYusIdhgqHBhtq7vUhNDGv" target="blank">YouTube</a> / <a href ="https://diode.zone/videos/watch/4107dd41-cf83-4496-b66c-fd066d4fd73e" target="blank">PeerTube</a>)
           </li>
           <li>
-           Wk 2
+           1.2 What is Code? Why Code?
           </li>
-          <li>
-           Wk 3
-          </li>
-          <li>
-         Wk 4
-          </li>
-        </ol>
+        </ul>
       </div>
     </div>
   </body>
