--- a/resource/lectures.html
+++ b/resource/lectures.html
@@ -37,9 +37,8 @@
         <ul>
           <li><a href="lectures.html">Lectures</a></li>
           <li><a href="tutorials.html">Tutorials</a></li>
-          <li><a href="readings.html">Readings</a></li>
-           <li><a href="references.html">References</a></li>
-     
+          <li><a href="library.html">Library</a></li>
+          <li><a href="references.html">References</a></li>
         </ul>
       </div>
       <div id="main-panel">
