--- a/resource/library.html
+++ b/resource/library.html
@@ -37,27 +37,30 @@
         <ul>
           <li><a href="lectures.html">Lectures</a></li>
           <li><a href="tutorials.html">Tutorials</a></li>
-          <li><a href="readings.html">Readings</a></li>
+          <li><a href="library.html">Library</a></li>
           <li><a href="references.html">References</a></li>
         </ul>
       </div>
       <div id="main-panel">
+        <h1>
+          Library
+        </h1>
         <table id="reading-table">
           <tr>
             <th>
-              <h1>
+              <h2>
                 Week
-              </h1>
+              </h2>
             </th>
             <th class="reading-header">
-              <h1>
+              <h2>
                 Required Readings
-              </h1>
+              </h2>
             </th>
             <th class="reading-header">
-              <h1>
+              <h2>
                 Further Readings
-              </h1>
+              </h2>
             </th>
           </tr>
           <tr id="week1">
@@ -147,13 +150,6 @@
                     target="_blank"
                     >Time and Culture</a
                   >
-                </li>
-                <li>
-                  <a
-                    href="http://angesleva.iki.fi/art/last/#:~:text='Last'%20is%20like%20a%20familiar,minutes%2C%20and%20the%20innermost%20hours."
-                    target="_blank"
-                    >Last Clock, Jussi Ängeslevä</a
-                  >, Jussi Ängeslevä
                 </li>
                 <li>
                   <a href="https://taeyoonchoi.com/time/" target="_blank"
@@ -298,11 +294,6 @@
                     >The Racist History Behind Facial Recognition</a
                   >, Sahil Chinoy
                 </li>
-                <li>
-                  <a href="gendershades.org" target="_blank"
-                    >gendershades.org</a
-                  >, Joy Buolamwini
-                </li>
               </ul>
             </td>
           </tr>
@@ -392,13 +383,6 @@
                     Ideology</a
                   >, Aimi Hamraie
                 </li>
-                <li>
-                  <a
-                    href="Watch Crip Camp (documentary) over the break"
-                    target="_blank"
-                    >Watch Crip Camp (documentary) over the break</a
-                  >
-                </li>
               </ul>
             </td>
             <td>
@@ -440,7 +424,15 @@
           <tr id="week10">
             <td>10</td>
             <td>
-              BREAK
+              <ul>
+                <li>
+                  <a
+                    href="https://www.youtube.com/watch?v=OFS8SpwioZ4"
+                    target="_blank"
+                    >Crip Camp:a Disability Revolution</a
+                  >(documentary feature)
+                </li>
+              </ul>
             </td>
           </tr>
           <tr id="week11">
