--- a/resource/references.html
+++ b/resource/references.html
@@ -37,10 +37,10 @@
     </div>
     <div class="main-container">
       <div id="sub-nav">
-        <ul>
+         <ul>
           <li><a href="lectures.html">Lectures</a></li>
           <li><a href="tutorials.html">Tutorials</a></li>
-          <li><a href="readings.html">Readings</a></li>
+          <li><a href="library.html">Library</a></li>
           <li><a href="references.html">References</a></li>
         </ul>
       </div>
@@ -57,7 +57,7 @@
 
         <footer>
           <p>
-            Have a suggestion? Request editing permissions <a href="">here</a>.
+            Have a suggestion? Request editing permissions <a href="https://docs.google.com/spreadsheets/d/1yHzf7MYg7KRrRjvL0eEhoh7hkQhd0mDqK0OnuRvuKig/edit?usp=sharing">here</a>.
           </p>
         </footer>
       </div>
