--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -20,7 +20,7 @@
     <div class="nav-container">
       <div style="font-size: 24px">
         <a href="../">
-        Critical Computation
+          Critical Computation
         </a>
       </div>
       <div><a href="../syllabus/">syllabus</a></div>
@@ -85,12 +85,14 @@
           <div class="assignment-grid-item">xinx[at]newschool[dot]edu</div>
           <div class="assignment-grid-item"></div>
 
-         <div class="assignment-grid-item"><b>One on One Meetings</b></div>
-          <div class="assignment-grid-item"><b>Tuesdays 10-11:40AM (EST)</b></div>
+          <div class="assignment-grid-item"><b>One on One Meetings</b></div>
+          <div class="assignment-grid-item">
+            <b>Tuesdays 10-11:40AM (EST)</b>
+          </div>
 
-        <div class="assignment-grid-item"></div>
           <div class="assignment-grid-item"></div>
-         <div class="assignment-grid-item">
+          <div class="assignment-grid-item"></div>
+          <div class="assignment-grid-item">
             <a
               href="https://calendly.com/moriwaki/cc-lecture-1-1-meeting?month=2020-09"
               target="blank"
@@ -98,23 +100,27 @@
             >
           </div>
 
-         <div class="assignment-grid-item">            <a
+          <div class="assignment-grid-item">
+            <a
               href="https://NewSchool.zoom.us/j/8721856442?pwd=QnNyTDQ2cG9wRzRMWTY0U1hSb0ZCUT09"
               >Katherine's Zooom</a
-            ></div>
+            >
+          </div>
           <div class="assignment-grid-item"></div>
-  <div class="assignment-grid-item">
+          <div class="assignment-grid-item">
             <a
               href="https://calendly.com/xinx/cc-lecture-1-1-meeting"
               target="blank"
               >Xin's Calendar</a
             >
           </div>
-          
-          <div class="assignment-grid-item"><a href="https://NewSchool.zoom.us/j/7245562259">Xin's Zoom</a></div>
+
+          <div class="assignment-grid-item">
+            <a href="https://NewSchool.zoom.us/j/7245562259">Xin's Zoom</a>
+          </div>
 
           <div class="assignment-grid-item">Asynchronous Advising</div>
-         <div class="assignment-grid-item">
+          <div class="assignment-grid-item">
             Slack
             <a
               href="https://critical-computation.slack.com/archives/C019AJ7DY58"
@@ -137,7 +143,7 @@
           </div>
           <div class="assignment-grid-item"></div>
 
-          <div class="assignment-grid-item">Bolor Amgalan </div>
+          <div class="assignment-grid-item">Bolor Amgalan</div>
           <div class="assignment-grid-item">
             amgab699[at]newschool[dot]edu
           </div>
@@ -150,7 +156,10 @@
             zhany016[at]newschool[dot]edu
           </div>
           <div class="assignment-grid-item">
-            <a href="https://NewSchool.zoom.us/j/99519780382?pwd=UzE3MFg4RVFvUFo2ZXA0ZEsxNmVIZz09">Zoom Link</a>
+            <a
+              href="https://NewSchool.zoom.us/j/99519780382?pwd=UzE3MFg4RVFvUFo2ZXA0ZEsxNmVIZz09"
+              >Zoom Link</a
+            >
             pw: mfadt
           </div>
 
@@ -181,17 +190,23 @@
             <a href="https://newschool.zoom.us/j/98197180071">Zoom Link</a> pw:
             mfadt
           </div>
-          <div class="assignment-grid-item">Aarati Akkapeddi (she/her/they)</div>
+          <div class="assignment-grid-item">
+            Aarati Akkapeddi (she/her/they)
+          </div>
           <div class="assignment-grid-item">
             akkaa949[at]newschool[dot]edu
           </div>
           <div class="assignment-grid-item"></div>
           <div class="assignment-grid-item">Cassandra Hradil</div>
           <div class="assignment-grid-item">
-            hradc987[at]newschool[dot]edu 
+            hradc987[at]newschool[dot]edu
           </div>
-            <div class="assignment-grid-item">
-            <a href="https://NewSchool.zoom.us/j/98934755336?pwd=YnlJOENCZGE0ekRZZkxpV1M4bWsyZz09">Zoom Link</a> pw: 008284
+          <div class="assignment-grid-item">
+            <a
+              href="https://NewSchool.zoom.us/j/98934755336?pwd=YnlJOENCZGE0ekRZZkxpV1M4bWsyZz09"
+              >Zoom Link</a
+            >
+            pw: 008284
           </div>
         </div>
 
@@ -561,9 +576,9 @@
         <p>
           We will use Slack as a space for hosting asynchronous conversations
           and discussions, and it will be our primary method of communication.
-          We all live in different time zones and have different schedules, and
-          it’s possible that it would take up to 24 hours to get a response from
-          the faculty.
+          We all live in different time zones and have different schedules, so
+          keep in mind that it’s possible to take up to 24 hours to get a
+          response from the faculty.
         </p>
         <div class="block">
           <h2>
