--- a/resource/index.html
+++ b/resource/index.html
@@ -29,11 +29,10 @@
     <div class="main-container">
       <div id="sub-nav">
         <ul>
-           <li><a href="lectures.html">Lectures</a></li>
+          <li><a href="lectures.html">Lectures</a></li>
           <li><a href="tutorials.html">Tutorials</a></li>
-          <li><a href="readings.html">Readings</a></li>
-           <li><a href="references.html">References</a></li>
-     
+          <li><a href="library.html">Library</a></li>
+          <li><a href="references.html">References</a></li>
         </ul>
       </div>
       <div id="main-panel">
