--- a/resource/tutorials.html
+++ b/resource/tutorials.html
@@ -37,7 +37,7 @@
         <ul>
           <li><a href="lectures.html">Lectures</a></li>
           <li><a href="tutorials.html">Tutorials</a></li>
-          <li><a href="readings.html">Readings</a></li>
+          <li><a href="library.html">Library</a></li>
           <li><a href="references.html">References</a></li>
         </ul>
       </div>
